--- a/app/src/main/res/layout/activity_logon.xml
+++ b/app/src/main/res/layout/activity_logon.xml
@@ -59,6 +59,18 @@
         android:text="로그인"
         />
 
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layout_input_pw"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="12sp"
+        android:text="회원가입"
+        android:layout_alignParentRight="true"
+
+        />
+
 
 
 </RelativeLayout>
