--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_marginBottom="16dp"
         >
         <EditText
+            android:id="@+id/et"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:hint="검색어 입력"
