레트로핏 안쓰고 파싱 성공 내 json 다 가져오기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,11 @@
             />
 
     </androidx.appcompat.widget.Toolbar>
+    <TextView
+        android:id="@+id/tttv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="asd"/>
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
@@ -47,6 +52,10 @@
         android:layout_below="@id/toolbar"
         android:layout_above="@id/bnv"
         />
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
