레트로핏 안쓰고 파싱 성공 내 json 입력 한 역의 정보 가져오기 최종 다이얼로그 어뎁터 작성중2

--- a/app/src/main/res/layout/fragment_last.xml
+++ b/app/src/main/res/layout/fragment_last.xml
@@ -4,16 +4,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.card.MaterialCardView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/re"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"
-        android:elevation="4dp"
-
-        >
-
-
-    </com.google.android.material.card.MaterialCardView>
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
