--- a/app/src/main/res/layout/fragment_last.xml
+++ b/app/src/main/res/layout/fragment_last.xml
@@ -6,8 +6,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/re"
+        android:id="@+id/recycler_view_last"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
