--- a/app/src/main/res/layout/fragment_my_map.xml
+++ b/app/src/main/res/layout/fragment_my_map.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.kakao.vectormap.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
