어뎁터 끝 맵뷰 시작 내 위치 끝 카카오api 파싱 끝

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:inputType="text"
             android:textSize="12sp"
             android:imeOptions="actionSearch"
+            android:text=""
             />
         <Button
             android:id="@+id/btn"
