Revert "게시글 삭제 추가 제외 완료"
This reverts commit 921f6a2c14249881d5f021f552015b93bcddcf4d.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bnv"
-        app:backgroundTint="@color/white"
-        app:itemIconTint="@color/black"/>
+        app:backgroundTint="@color/white"/>
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
