--- a/app/src/main/res/layout/recycler_view_last.xml
+++ b/app/src/main/res/layout/recycler_view_last.xml
@@ -2,18 +2,25 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="175dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingDefaultResource"
     app:cardElevation="4dp"
     android:backgroundTint="@color/white"
     android:layout_margin="16dp"
+
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/reviewbg"
+
+            />
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
