--- a/app/src/main/res/layout/activity_logon.xml
+++ b/app/src/main/res/layout/activity_logon.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activites.MainActivity">
+    tools:context=".activites.MainActivity"
+    android:background="@color/white">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolvar"
         android:layout_width="match_parent"
@@ -57,6 +58,7 @@
         android:layout_marginLeft="80dp"
         android:layout_marginTop="12sp"
         android:text="로그인"
+        android:backgroundTint="@color/black"
         />
 
     <Button
@@ -68,7 +70,7 @@
         android:layout_marginTop="12sp"
         android:text="회원가입"
         android:layout_alignParentRight="true"
-
+        android:backgroundTint="@color/black"
         />
 
 
