--- a/app/src/main/res/layout/fragment_review_search.xml
+++ b/app/src/main/res/layout/fragment_review_search.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="24dp">
+    android:layout_margin="24dp"
+    android:backgroundTint="@color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="리뷰 검색"
+            android:backgroundTint="@color/black"
             />
         <ScrollView
             android:layout_width="match_parent"
