--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.SubwayToilet" parent="Base.Theme.SubwayToilet" />
+    <style name="Theme.SubwayToilet" parent="Base.Theme.SubwayToilet" >
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
 </resources>
